--- a/src/habits/templates/habits/add_habit_modal.html
+++ b/src/habits/templates/habits/add_habit_modal.html
@@ -33,7 +33,11 @@
                                    style="background-color: black;
                                           width: 120px;
                                           margin-right: 30px">Category:</label>
-                            {{ form.category }}
+                            <select name="category" id="category">
+                                {% for category in request.user.profile.categories.all %}
+                                    <option value="{{ category.id }}">{{ category.name }}</option>
+                                {% endfor %}
+                            </select>
                         </div>
                         <div>
                             <label style="background-color: black; width: 120px; margin-right: 30px;">Frequency:</label>
