--- a/src/habits/templates/habits/categories.html
+++ b/src/habits/templates/habits/categories.html
@@ -41,7 +41,7 @@
                            required>
                     <br>
                     <label style="background-color: black; width: 80px; margin-right: 30px;">Color:</label>
-                    <input id="color" name="color" data-jscolor="{}">
+                    <input id="color" name="color" style="border-radius: 10px" data-jscolor="{}">
                 </div>
                 <hr>
                 <button type="submit"
