--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -163,7 +163,7 @@
                 <!-- END COLORLIB-ASIDE -->
                 <div id="colorlib-main"
                      style="position: relative;
-                            background-color: rgb(0, 0, 0);
+                            background-color: rgb(225, 225, 225);
                             background-image:url({% static 'main/images/3d-geometric-abstract-background.jpg' %});
                             background-size: cover;
                             height: 1000px">
@@ -174,7 +174,10 @@
                                      style="position: relative;
                                             margin-bottom: 25px;
                                             bottom: 20px">
-                                    <h1 class="h2" style="display: inline-block; margin-right: 10px;">Hello, {{ user.username }}</h1>
+                                    <h1 class="h2"
+                                        style="display: inline-block;
+                                               margin-right: 10px;
+                                               font-family: Georgia, Times, serif">Hello, {{ user.username }}</h1>
                                     <img src="{{ user.profile.image.url }}"
                                          style="position: absolute;
                                                 width: 38px;
@@ -211,13 +214,24 @@
                                 {% endif %}
                                 {% block content %}
                                     <!-- HABITS LIST -->
-                                    <div class="col-md-6">
-                                        <div style="position: relative;
-                                                    right: 150px;
-                                                    bottom: 70px;
-                                                    border-radius: 10px;
-                                                    width: 1000px;
-                                                    height: 1000px">{% include 'habits/habits_list.html' %}</div>
+                                    <div class="container" style="position: relative; right: 100px;">
+                                        <div class="row"
+                                             style="position: relative;
+                                                    bottom: 130px;
+                                                    border-radius: 20px;
+                                                    width: 400px;
+                                                    background-color: rgba(220, 220, 220, 0.6)">
+                                            <div class="col-md-12">
+                                                <h1 style="font-family: Georgia, Times, serif;">
+                                                    Today: <time id="currentTime" datetime=""></time>
+                                                </h1>
+                                            </div>
+                                        </div>
+                                        <div class="row" style="position: relative; bottom: 180px; right: 190px;">
+                                            <div class="col-md-12">
+                                                <div style="border-radius: 10px; width: 1000px; height: 1000px">{% include 'habits/habits_list.html' %}</div>
+                                            </div>
+                                        </div>
                                     </div>
                                     <!-- -->
                                     <div class="col-md-6"></div>
@@ -256,6 +270,12 @@
             categoryList.classList.remove('visible');
         }
     });
+    // JavaScript to get current date <time>
+      const currentTimeElement = document.getElementById("currentTime");
+      const currentDate = new Date().toISOString().slice(0, 10); // Current date in ISO format
+
+      currentTimeElement.textContent = currentDate;
+      currentTimeElement.setAttribute("datetime", currentDate); // Set date in datetime
         </script>
     </body>
 </html>
