templates(habits): add new intervalField

--- a/src/habits/templates/habits/add_habit_modal.html
+++ b/src/habits/templates/habits/add_habit_modal.html
@@ -1,3 +1,19 @@
+<head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(function() {
+        $('#frequency').change(function() {
+            var selectedValue = $(this).val();
+            if (selectedValue === 'INTERVAL') {
+                $('#intervalField').html('<label for="interval_value" style="background-color: black; width: 120px; margin-right: 30px;">Interval Value:</label>' +
+                    '<input id="interval_value" name="interval_value" style="border-radius: 10px; width: 200px" placeholder="Enter interval value">');
+            } else {
+                $('#intervalField').empty();
+            }
+        });
+    });
+    </script>
+</head>
 <div class="modal fade"
      id="addHabitModal"
      tabindex="-1"
@@ -58,6 +74,7 @@
                                 {% for frequency in frequencies %}<option value="{{ frequency.0 }}">{{ frequency.1 }}</option>{% endfor %}
                             </select>
                         </div>
+                        <div id="intervalField"></div>
                         <div>
                             <label style="background-color: black; width: 120px; margin-right: 30px;">Is positive:</label>
                             <input type="checkbox"
