--- a/src/habits/templates/habits/categories.html
+++ b/src/habits/templates/habits/categories.html
@@ -107,6 +107,10 @@
                                             <div class="form-group">
                                                 <input type="text" class="form-control" name="name" id="name" placeholder={{ category.name }} required>
                                             </div>
+                                            <div class="form-group">
+                                                <label style="background-color: black; width: 80px; margin-right: 30px;">Color:</label>
+                                                <input id="color" name="color" style="border-radius: 10px" data-jscolor="{}">
+                                            </div>
                                             <input type="hidden" name="category_id" value="{{ category.id }}">
                                             <button type="submit"
                                                     class="btn btn-primary"
