--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -152,6 +152,12 @@
                                 </ul>
                             </li>
                             <li>
+                                <a href="{% url 'achievements' %}">Achievements</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'statistics' %}">Statistics</a>
+                            </li>
+                            <li>
                                 <a href="{% url 'profile' %}">Profile</a>
                             </li>
                             <li>
