--- a/src/habits/templates/habits/categories.html
+++ b/src/habits/templates/habits/categories.html
@@ -58,7 +58,16 @@
                 <div style="display: flex; align-items: center; margin-bottom: 10px;">
                     <form method="get">
                         <ul style="list-style-type: disc; margin: 0;">
-                            <li style="color: black; font-size: 20px;">{{ category.name }} |</li>
+                            <li style="color: black; font-size: 20px;">
+                                <div style="position: relative;
+                                            display: inline-block;
+                                            background-color: {{ category.color }};
+                                            width: 25px;
+                                            height: 25px;
+                                            top: 5px;
+                                            border-radius: 5px">&nbsp</div>
+                                <span style="display: inline-block; vertical-align: middle;">{{ category.name }}</span> |
+                            </li>
                         </ul>
                     </form>
                     <form method="post"
